--- a/contato.html
+++ b/contato.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Contato</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vamos ver se cosigo</title>
 	<link rel="stylesheet" href="estilo/contato.css">
+    <style>
+        body{
+            text-align: center;
+            background-color: black;
+        }
+        h1{
+            color: white;
+        }
+    </style>
 </head>
 <body>
-	<header>
-		<h1>Redes sociais para Contato</h1>
-	</header>
-	<main>
-		<section class="facebook">
-			<p>Segue meu facebook abaixo ou <a href="https://www.facebook.com/myhael.bueno/">clique aqui</a></p>
-			<img src="Screenshot_1.png" alt="">
-		</section>
-
-		<section class="github">
-
-			<p>Segue meu github abaixo ou <a href="https://github.com/Myhaelraphael?tab=repositories">clique aqui</a></p>
-		</section>
-	</main>
+    <h1>Clique nas Imagens abaixo e será redirecionado para minhas redes sociais</h1>
+        <a href="https://www.facebook.com/myhael.bueno/"><img class="facebook" src="imagens/Screenshot.png" alt="Fcebook"></a><a href="https://github.com/Myhael-bueno?tab=repositories"><img class="Github" src="imagens/Screenshot_1.png" alt="Github"></a></br><a href="https://www.linkedin.com/in/myhael-bueno-b863961b8/"><img class="Linkedin" src="imagens/Screenshot_2.png" alt="Imagem Linkedin"></a> <a href="https://x.com/myhael8"><img class="Twitter" src="imagens/Screenshot_3.png" alt="Twitter"></a>
 </body>
 </html>
