--- a/perfil.media.html
+++ b/perfil.media.html
@@ -16,9 +16,9 @@
 
 	<nav>
 		<ul>
-			<li><a href="">Curriculo</a></li>
-			<li><a href="">Projetos</a></li>
-			<li><a href="">Contato</a></li>
+			<li><a href="Curriculo.html">Curriculo</a></li>
+			<li><a href="projetos.html">Projetos</a></li>
+			<li><a href="contato.html">Contato</a></li>
 		</ul>
 	</nav>
 </main>
